[gd_scene load_steps=2 format=3 uid="uid://b4q6y4n2x1m3p"]

[ext_resource type="Script" uid="uid://dwkoh7na8fwc3" path="res://scenes/ui/Pause.gd" id="1_3k4m3"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3k4m3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pausa"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continuar"

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Salvar"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Opções"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Menu Principal"
